# lmp

MagicEyes/: CMakeLists.txt  README.md
MagicEyes/src/backend/fs/fs_watcher/bpf/: CacheTrack.bpf.c  open.bpf.c  write.bpf.c
MagicEyes/src/backend/fs/fs_watcher/include/: fs_watcher.h
MagicEyes/src/backend/fs/fs_watcher/src/: fs_watcher.c
MagicEyes/src/backend/hypervisor/kvm_watcher/src/: kvm_watcher.c
MagicEyes/src/backend/memory/mem_watcher/src/: mem_watcher.c
MagicEyes/src/backend/net/net_watcher/: CMakeLists.txt
MagicEyes/src/backend/net/net_watcher/bpf/: common.bpf.h  net_watcher.bpf.c  tcp.bpf.h  udp.bpf.h
MagicEyes/src/backend/net/net_watcher/include/: net_watcher.h  net_watcher_hepler.h
MagicEyes/src/backend/net/net_watcher/src/: net_watcher.c  net_watcher_hepler.c
MagicEyes/src/backend/process/cpu_watcher/: CMakeLists.txt
MagicEyes/src/backend/process/cpu_watcher/include/: cpu_watcher_helper.h
MagicEyes/src/backend/process/cpu_watcher/src/: controller.c  cpu_watcher.c
MagicEyes/src/magic_eyes_cli/: README.md
MagicEyes/src/visualization/: CMakeLists.txt  eBPF_prometheus
MagicEyes/src/visualization/panels/: cpu_watcher.json  fs_watcher.json  mem_watcher.json  net_watcher.json
MagicEyes/src/visualization/vscode_ext/lmp_ext_vscode/: package.json
MagicEyes/src/visualization/vscode_ext/panels/: kvm_watcher.json
MagicEyes/src/visualization/vscode_ext/tool_config_sample/: lmp_tool_ext_config.json
eBPF_Supermarket/Auto_Cluster_Deployer/doc/: Comm_design.md  Env_Deploy.md  Framework_design.md  Web_design.md  test.md
eBPF_Supermarket/CPU_Subsystem/cpu_watcher/: cpu_watcher.c
eBPF_Supermarket/Filesystem_Subsystem/fast_fuse/difuse/test/: pro.sh
eBPF_Supermarket/Memory_Subsystem/mem_watcher/: mem_watcher.c
eBPF_Supermarket/Network_Subsystem/TrafficManager/: go.mod  go.sum
eBPF_Supermarket/Network_Subsystem/net_watcher/test/: udp_client.py  udp_server.py
eBPF_Supermarket/Stack_Analyser/exporter/: go.mod  go.sum
eBPF_Supermarket/kvm_watcher/include/: common.h
eBPF_Supermarket/kvm_watcher/include/bpf/: container.h
eBPF_Supermarket/kvm_watcher/src/: kvm_watcher.bpf.c  kvm_watcher.c
eBPF_Supermarket/old_project/cilium_ebpf_probe/: go.mod  go.sum
eBPF_Visualization/eBPF_prometheus/: vis.sh
